--- a/base_template/global/base.html
+++ b/base_template/global/base.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-{% include 'recipes/partials/head.html' %}
 
-<title>{% block title %}{% endblock title %}Recipe</title>
+<head>
+    {% include 'recipes/partials/head.html' %}
+
+    <title>{% block title %}{% endblock title %}Recipe</title>
 
 </head>
+
 <body>
     {% include 'recipes/partials/header.html' %}
     {% include 'recipes/partials/search.html' %}
     <main class="main-content-container">
         {% block content %}{% endblock content %}
+        {% include 'recipes/partials/pagination.html' %}
     </main>
     {% include 'recipes/partials/footer.html' %}
-    
+
 </body>
+
 </html>
