--- a/base_template/global/base.html
+++ b/base_template/global/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt">
 
+{% load static %}
 <head>
     {% include 'global/partials/head.html' %}
 
@@ -16,7 +17,7 @@
         {% include 'global/partials/pagination.html' %}
     </main>
     {% include 'global/partials/footer.html' %}
-
+    <script src="{% static 'global/js/scripts.js' %}"></script>
 </body>
 
 </html>
