--- a/base_template/global/base.html
+++ b/base_template/global/base.html
@@ -8,10 +8,11 @@
 
     <title>{% block title %}{% endblock title %}Recipe</title>
 
-    
+
 </head>
 
 <body>
+    {% include 'global/partials/menu.html' %}
     {% include 'global/partials/header.html' %}
     {% include 'global/partials/search.html' %}
     <main class="main-content-container">
